# API_T_Maze

./: .gitignore  README.md  appli.py  environment.yml  pyproject.toml  test_pkg.py  transition_door.py.bak  vrai_main.py
datasouriscamera/: devices.py  motion_detector.py
datasouriscamera/tests/: test_app.py  test_devices.py  test_motion_detector.py
