# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["datasouriscamera*"]  # ["*"] by default
exclude = ["datasouriscamera.tests*"]  # empty by default

[project]
name = "t_maze"
version = "1.0.0"
description = ""
# readme = "README.md"
authors = [{ name = "Yanis Phytoxil", email = "yanis.bouhtou@esme.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
# keywords = ["feed", "reader", "tutorial"]
dependencies = [
  "mqtt_device@git+https://nicknolt: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@github.com/nicknolt/mqtt_device",
]
requires-python = ">=3.8"

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pipython -m pip install pip-toolsp-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/nicknolt/datasouriscamera"

# [project.scripts]
# realpython = "reader.__main__:main"